--- a/LAB2/Codigo/frontend/pages/cadastroAluno.html
+++ b/LAB2/Codigo/frontend/pages/cadastroAluno.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../css/cadastroAluno.css" />
 </head>
 <body>
+  <a href="inicialPage.html" class="voltar-btn">&#8592; Voltar</a>
   <div class="container">
     <h1>Cadastro de Aluno</h1>
     <form id="alunoForm">
