--- a/LAB2/Codigo/frontend/pages/listAlunos.html
+++ b/LAB2/Codigo/frontend/pages/listAlunos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/listAlunos.css">
 </head>
 <body>
+  <a href="cadastroAluno.html" class="voltar-btn">&#8592; Voltar</a>
     <h2>Alunos Cadastrados</h2>
     <div id="alunosList"></div>
 
