--- a/LAB2/Codigo/frontend/pages/listEmpresas.html
+++ b/LAB2/Codigo/frontend/pages/listEmpresas.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../css/listEmpresas.css">
 </head>
 <body>
-
+    
+<a href="cadastroEmpresaParceira.html" class="voltar-btn">&#8592; Voltar</a>
 <h1>Empresas Parceiras</h1>
 
 <div id="empresas-container">
