--- a/LAB2/Codigo/frontend/pages/cadastroEmpresaParceira.html
+++ b/LAB2/Codigo/frontend/pages/cadastroEmpresaParceira.html
@@ -6,28 +6,35 @@
   <link rel="stylesheet" href="../css/cadastroEmpresaParceira.css">
 </head>
 <body>
+  <a href="inicialPage.html" class="voltar-btn">&#8592; Voltar</a>
 
-  <h2>Cadastro de Empresa Parceira</h2>
+  <div class="container">
+    <h2>Cadastro de Empresa Parceira</h2>
+    <form id="empresaForm">
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
 
-  <form id="empresaForm">
-    <label>Email:</label>
-    <input type="email" id="email" required>
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" required>
 
-    <label>Senha:</label>
-    <input type="password" id="senha" required>
+        <label for="nome">Nome da Empresa:</label>
+        <input type="text" id="nome" required>
 
-    <label>Nome da Empresa:</label>
-    <input type="text" id="nome" required>
+        <label for="cnpj">CNPJ:</label>
+        <input type="text" id="cnpj" required>
 
-    <label>CNPJ:</label>
-    <input type="text" id="cnpj" required>
+        <h3>Vantagens</h3>
+        <div id="vantagensContainer">
+            </div>
+        <button type="button" class="add-vantagem-btn" onclick="adicionarVantagem()">Adicionar Vantagem</button>
 
-    <h3>Vantagens</h3>
-    <div id="vantagensContainer"></div>
-    <button type="button" onclick="adicionarVantagem()">Adicionar Vantagem</button>
+        <button type="submit" class="submit-btn">Cadastrar Empresa</button>
 
-    <button type="submit">Cadastrar Empresa</button>
-  </form>
+        <button type="button" class="listaEmpresas-btn" onclick="window.location.href='listEmpresas.html'">Ver Empresas Cadastradas</button>
+        
+    </form>
+    
+</div>
 
   <script src="../js/cadastroEmpresaParceira.js"></script>
 
