--- a/LAB2/Codigo/frontend/pages/cadastroEmpresaParceira.html
+++ b/LAB2/Codigo/frontend/pages/cadastroEmpresaParceira.html
@@ -1,42 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Cadastro de Empresa Parceira</title>
-  <link rel="stylesheet" href="../css/cadastroEmpresaParceira.css">
+    <meta charset="UTF-8">
+    <title>Sistema de Moedas Estudantis</title>
+    <link rel="stylesheet" href="../css/cadastroEmpresaParceira.css">
 </head>
 <body>
-  <a href="inicialPage.html" class="voltar-btn">&#8592; Voltar</a>
-
-  <div class="container">
-    <h2>Cadastro de Empresa Parceira</h2>
-    <form id="empresaForm">
-        <label for="email">Email:</label>
-        <input type="email" id="email" required>
-
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" required>
-
-        <label for="nome">Nome da Empresa:</label>
-        <input type="text" id="nome" required>
-
-        <label for="cnpj">CNPJ:</label>
-        <input type="text" id="cnpj" required>
-
-        <h3>Vantagens</h3>
-        <div id="vantagensContainer">
-            </div>
-        <button type="button" class="add-vantagem-btn" onclick="adicionarVantagem()">Adicionar Vantagem</button>
-
-        <button type="submit" class="submit-btn">Cadastrar Empresa</button>
-
-        <button type="button" class="listaEmpresas-btn" onclick="window.location.href='listEmpresas.html'">Ver Empresas Cadastradas</button>
-        
-    </form>
-    
-</div>
-
-  <script src="../js/cadastroEmpresaParceira.js"></script>
-
+    <div class="container">
+        <h1>SISTEMA DE MOEDAS ESTUDANTIS</h1>
+        <div class="toggle-buttons">
+            <button onclick="window.location.href='cadastroAluno.html'">Aluno</button>
+            <button class="active">Empresa parceira</button>
+        </div>
+        <form id="empresaForm">
+            <input type="text" id="nome" placeholder="Nome da empresa" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="senha" placeholder="Senha" required>
+            <input type="text" id="cnpj" placeholder="CNPJ" required>
+            <button type="submit" class="cadastrar-btn">Cadastrar</button>
+        </form>
+    </div>
+    <script src="../js/cadastroEmpresaParceira.js"></script>
 </body>
 </html>
