parte final: projeto moedas

--- a/LAB2/Codigo/frontend/pages/cadastroAluno.html
+++ b/LAB2/Codigo/frontend/pages/cadastroAluno.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="../css/cadastroAluno.css" />
 </head>
 <body>
-  <a href="inicialPage.html" class="voltar-btn">&#8592; Voltar</a>
   <div class="container">
     <h1>SISTEMA DE MOEDAS ESTUDANTIS</h1>
     <div class="toggle-buttons">
@@ -41,7 +40,9 @@
         </select>
       </div>
       <button type="submit" class="cadastrar-btn">Cadastrar</button>
-      <button onclick="window.location.href='listAlunos.html'">Ver Alunos Cadastrados</button>
+      <div class="login-link">
+        <a href="login.html">Já tem uma conta? Faça login</a>
+      </div>
     </form>
     <div id="mensagem"></div>
   </div>
