--- a/LAB2/Codigo/frontend/pages/cadastroEmpresaParceira.html
+++ b/LAB2/Codigo/frontend/pages/cadastroEmpresaParceira.html
@@ -18,6 +18,9 @@
             <input type="password" id="senha" placeholder="Senha" required>
             <input type="text" id="cnpj" placeholder="CNPJ" required>
             <button type="submit" class="cadastrar-btn">Cadastrar</button>
+            <div class="login-link">
+                <a href="login.html">Já tem uma conta? Faça login</a>
+            </div>
         </form>
     </div>
     <script src="../js/cadastroEmpresaParceira.js"></script>
