--- a/LAB2/Codigo/frontend/pages/dashboardProfessor.html
+++ b/LAB2/Codigo/frontend/pages/dashboardProfessor.html
@@ -5,14 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Professor</title>
     <link rel="stylesheet" href="../css/dashboardProfessor.css">
+    <style>
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 30px;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .header-actions {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .logout-btn {
+            background-color: #dc2626;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        .logout-btn:hover {
+            background-color: #b91c1c;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <h1>Dashboard Professor</h1>
-            <div class="saldo-container">
-                <span>Saldo: </span>
-                <span id="saldoMoedas">0</span>
+            <div class="header-actions">
+                <div class="saldo-container">
+                    <span>Saldo: </span>
+                    <span id="saldoMoedas">0</span>
+                </div>
+                <button id="logoutBtn" class="logout-btn">Sair</button>
             </div>
         </div>
 
