--- a/LAB2/Codigo/frontend/pages/login.html
+++ b/LAB2/Codigo/frontend/pages/login.html
@@ -12,7 +12,10 @@
         <form id="loginForm">
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="senha" placeholder="Senha" required>
-            <a href="esqueceuSenha.html" class="forgot-password">Esqueceu a senha?</a>
+            <div class="links">
+                <a href="esqueceuSenha.html" class="forgot-password">Esqueceu a senha?</a>
+                <a href="cadastroAluno.html" class="register-link">Não tem uma conta? Cadastre-se</a>
+            </div>
             <button type="submit" class="entrar-btn">Entrar</button>
         </form>
     </div>
