--- a/LAB2/Codigo/frontend/pages/dashboardAluno.html
+++ b/LAB2/Codigo/frontend/pages/dashboardAluno.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="actions">
-            <button onclick="window.location.href='vantagensDisponiveis.html'" class="action-button">Ver Vantagens disponíveis</button>
+            <button onclick="window.location.href='regateVantagens.html'" class="action-button">Ver Vantagens disponíveis</button>
             <button onclick="window.location.href='vantagensAdquiridas.html'" class="action-button">Ver Vantagens adquiridas</button>
             <button onclick="window.location.href='historicoRecebimento.html'" class="action-button">Histórico de recebimento de moedas</button>
         </div>
