--- a/LAB2/Codigo/frontend/pages/historicoRecebimento.html
+++ b/LAB2/Codigo/frontend/pages/historicoRecebimento.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histórico de Envios</title>
-    <link rel="stylesheet" href="../css/historicoEnvios.css">
+    <title>Histórico de Recebimento</title>
+    <link rel="stylesheet" href="../css/historicoRecebimento.css">
 </head>
 <body>
     <div class="container">
-        <h1>HISTÓRICO DE ENVIOS</h1>
+        <h1>HISTÓRICO DE RECEBIMENTO</h1>
         
         <div class="table-container">
             <table>
                 <thead>
                     <tr>
-                        <th>Aluno</th>
+                        <th>Professor</th>
                         <th>Data</th>
                         <th>Motivo</th>
                         <th>Valor</th>
                     </tr>
                 </thead>
-                <tbody id="historicoTableBody">
+                <tbody id="historicoRecebimentoTableBody">
                     <!-- Dados serão inseridos aqui via JavaScript -->
                 </tbody>
             </table>
         </div>
 
-        <button onclick="window.location.href='dashboardProfessor.html'" class="back-btn">Voltar</button>
+        <button onclick="window.location.href='dashboardAluno.html'" class="back-btn">Voltar</button>
     </div>
-    <script src="../js/historicoEnnvios.js"></script>
+    <script src="../js/historicoRecebimento.js"></script>
 </body>
 </html>
