--- a/LAB2/Codigo/frontend/pages/vantagensAdquiridas.html
+++ b/LAB2/Codigo/frontend/pages/vantagensAdquiridas.html
@@ -3,31 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histórico de Envios</title>
-    <link rel="stylesheet" href="../css/historicoEnvios.css">
+    <title>Vantagens Adquiridas</title>
+    <link rel="stylesheet" href="../css/vantagensAdquiridas.css">
 </head>
 <body>
     <div class="container">
-        <h1>HISTÓRICO DE ENVIOS</h1>
+        <h1>VANTAGENS ADQUIRIDAS</h1>
         
         <div class="table-container">
             <table>
                 <thead>
                     <tr>
-                        <th>Aluno</th>
+                        <th>Empresa</th>
+                        <th>Vantagem</th>
                         <th>Data</th>
-                        <th>Motivo</th>
-                        <th>Valor</th>
+                        <th>Custo</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
-                <tbody id="historicoTableBody">
+                <tbody id="vantagensTableBody">
                     <!-- Dados serão inseridos aqui via JavaScript -->
                 </tbody>
             </table>
         </div>
 
-        <button onclick="window.location.href='dashboardProfessor.html'" class="back-btn">Voltar</button>
+        <button onclick="window.location.href='dashboardAluno.html'" class="back-btn">Voltar</button>
     </div>
-    <script src="../js/historicoEnnvios.js"></script>
+    <script src="../js/vantagensAdquiridas.js"></script>
 </body>
 </html> 
