Removendo validações do front para os dados serem tratados no backend

--- a/LAB2/Codigo/frontend/pages/cadastroAluno.html
+++ b/LAB2/Codigo/frontend/pages/cadastroAluno.html
@@ -14,28 +14,28 @@
       <button onclick="window.location.href='cadastroEmpresaParceira.html'">Empresa parceira</button>
     </div>
     <form id="alunoForm">
-      <input type="text" id="nome" placeholder="Nome completo" required />
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="senha" placeholder="Senha" required />
+      <input type="text" id="nome" placeholder="Nome completo" />
+      <input type="email" id="email" placeholder="Email" />
+      <input type="password" id="senha" placeholder="Senha" />
       <div class="document-row">
-        <input type="text" id="cpf" placeholder="CPF" required />
-        <input type="text" id="rg" placeholder="RG" required />
+        <input type="text" id="cpf" placeholder="CPF" />
+        <input type="text" id="rg" placeholder="RG" />
       </div>
       <div class="address-row">
-        <input type="text" id="rua" placeholder="Rua" required />
-        <input type="text" id="numero" placeholder="Número" required />
+        <input type="text" id="rua" placeholder="Rua" />
+        <input type="text" id="numero" placeholder="Número" />
         <input type="text" id="complemento" placeholder="Complemento" />
       </div>
       <div class="address-row">
-        <input type="text" id="bairro" placeholder="Bairro" required />
-        <input type="text" id="cidade" placeholder="Cidade" required />
-        <input type="text" id="uf" placeholder="UF" required />
+        <input type="text" id="bairro" placeholder="Bairro" />
+        <input type="text" id="cidade" placeholder="Cidade" />
+        <input type="text" id="uf" placeholder="UF" />
       </div>
       <div class="institution-row">
-        <select id="instituicaoSelect" required>
+        <select id="instituicaoSelect">
           <option value="">Selecione a Instituição</option>
         </select>
-        <select id="cursoSelect" required>
+        <select id="cursoSelect">
           <option value="">Selecione o Curso</option>
         </select>
       </div>
