--- a/LAB2/Codigo/frontend/pages/envioMoedas.html
+++ b/LAB2/Codigo/frontend/pages/envioMoedas.html
@@ -9,20 +9,24 @@
 <body>
     <div class="container">
         <h1>ENVIO DE MOEDAS</h1>
+        
+        <!-- Área de mensagens -->
+        <div id="mensagem" class="mensagem"></div>
+        
         <form id="envioForm">
             <div class="form-group">
-                <select id="alunoSelect" required>
+                <select id="alunoSelect">
                     <option value="">*Selecione o aluno</option>
                 </select>
             </div>
 
             <div class="form-group">
-                <input type="number" id="quantidade" placeholder="*Quantidade" required min="1">
+                <input type="number" id="quantidade" placeholder="*Quantidade">
                 <small>*Valor do envio</small>
             </div>
 
             <div class="form-group">
-                <textarea id="motivo" placeholder="*Motivo" required></textarea>
+                <textarea id="motivo" placeholder="*Motivo"></textarea>
                 <small>*Informar o porquê o aluno está recebendo as moedas</small>
             </div>
 
